--- a/wearprefs/src/main/AndroidManifest.xml
+++ b/wearprefs/src/main/AndroidManifest.xml
@@ -1,3 +1,8 @@
-<manifest package="wearprefs.library">
-    <application />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="wearprefs.library" >
+    <application>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"
+            />
+    </application>
 </manifest>
