--- a/sample-mobile/src/main/AndroidManifest.xml
+++ b/sample-mobile/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     >
 
     <application
-        android:name="wearprefs.sample.Application"
+        android:name="wearprefs.SyncDefaultApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
