--- a/sample-wear/build.gradle
+++ b/sample-wear/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "wearprefs.sample"
         minSdkVersion 20
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode project.VERSION_CODE
+        versionName project.VERSION_NAME
     }
     buildTypes {
         release {
