--- a/wearprefs/build.gradle
+++ b/wearprefs/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 ext {
     PUBLISH_GROUP_ID = 'me.denley.wearprefs'
     PUBLISH_ARTIFACT_ID = 'WearPrefs'
-    PUBLISH_VERSION = '1.0'
+    PUBLISH_VERSION = project.VERSION_NAME
 }
 
 android {
@@ -11,10 +11,10 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 9
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode project.VERSION_CODE
+        versionName project.VERSION_NAME
     }
     buildTypes {
         release {
